<?xml version="1.0" encoding="utf-8"?>


<!-- Your nav graph id must match your menu item id -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    app:startDestination="@+id/titleScreen">

    <fragment
        android:id="@+id/titleScreen"
        android:name="com.thoughtworks.android.ui.navigation.fragmentnav.homescreen.Title"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_title_to_about"
            app:destination="@id/aboutScreen" />
    </fragment>

    <fragment
        android:id="@+id/aboutScreen"
        android:name="com.thoughtworks.android.ui.navigation.fragmentnav.homescreen.About"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/deeplinkScreen"
        android:name="com.thoughtworks.android.ui.navigation.fragmentnav.homescreen.Deeplink"
        android:label="@string/deeplink"
        tools:layout="@layout/fragment_deeplink">
        <deepLink
            app:uri="android-app://thoughtworks.com/deeplink"/>
    </fragment>

</navigation>
