<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="148.9dp"
        android:layout_height="30.3dp"
        android:layout_marginLeft="113.1dp"
        android:layout_marginRight="113.1dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="548.7dp"
        android:background="@drawable/fill_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/aware" />

    <EditText
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="196dp"
        android:layout_marginBottom="431dp"
        android:layout_marginLeft="62.5dp"
        android:layout_marginRight="62.5dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:paddingStart="20dp"
        android:background="@drawable/shape"
        android:hint="@string/username"
        android:textColorHint="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="246dp"
        android:layout_marginBottom="391dp"
        android:layout_marginLeft="62.5dp"
        android:layout_marginRight="62.5dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:paddingStart="20dp"
        android:background="@drawable/shape"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="115dp"
        android:layout_height="22.5dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="312dp"
        android:text="@string/remember_me"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="22.5dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="312dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>